--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "iloveyousabarremuch",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://kthong3.github.io/iloveyousabarremuch",
   "dependencies": {
+    "gh-pages": "^2.1.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-scripts": "3.0.1"
@@ -11,6 +13,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build --git git",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
